new.plone.org/static/plone.css
/* ... */
a.link-parent {
	font-size: 11px;
}

/* @end */

/* @group Accordion menu */

#accordion,
dl.portlet {
	border: 1px solid #eee;
	background-color: #f6f6f6;
}

#accordion {
	height: 29.7em;	
}
#accordion h2 {
	cursor: pointer;
}

#accordion h2,
dl.portlet dt {
	font-family: "Helvetica Neue", Arial;
	background-color: #76AD17;
	border-bottom: 1em solid #63A100;
	line-height: 2em;
	height: 1em;
	padding: 0 6px;
	margin: -1px -1px 0 -1px;
	color: White !important;
	font-weight: bold;
}

dl.portlet {
	margin: 0 0 1em 1em;
}

dl.portlet dt {
	padding-left: 1em;
}

dl.portlet dt a:link,
dl.portlet dt a:visited,
dl.portlet dt a:hover {
	color: White !important;
	border: none !important;
}

dl.portlet dd {
	font-size: 13px;	
	padding: 1em;
}


#accordion h2.selected {
	cursor: inherit;
	/*padding-left: 1.6em;*/
}

#accordion h2.selected:before {
	content: "▼ ";
	/*content: " ";*/
}

#accordion h2:before {
	content: "▶ ";
}


#accordion div {
	margin: 10px;
	font-size: 12px;
}

#accordion div li {	
	display: block;
	margin-top: 0.25em;
}

#accordion li a:before {
	content: "→ ";
}


#accordion dl {
	margin-top: 0;
	margin-bottom: 1em;
	line-height: 1.5em;
}

#accordion dt {
	font-weight: bold;
}
#accordion dd {
	margin-left: 1em;
}

#plone-boxed {
	display: block;
	margin: 0 auto;
}

#download-link {
	display: block;
	width: 153px;
	height: 51px;
	background: url(images/download-box.png) no-repeat;
	color: white;
	font-size: 12px;
	font-weight: bold;
	padding: 144px 0 0 10px;
	margin: 0 auto;
}

/* @end */

/* @group Footer */

#footer-wrapper {
/* Sticky footer */
    height: 16em;
	background: #329fd7 top left url(images/footer-gradient.png) repeat-x;
}

#push {
/* Sticky footer */
	height: 16em;
}

#footer {
	color: White;
	font-family: "Lucida Grande", Verdana;
	font-size: 10px;
	margin: 0 auto;
	padding: 2em 0;
	width: 800px;
}

#footer-logo {
	float: left;
	padding: 0 1em 2em 0;
}

#footer-logo img {
	border-right: 1px solid white;
}

#footer-text {
	padding: 2em 0;
}

/* @end */

/* @group Site map */

#sitemap  {
/* IE:
	clear: both;
	margin-bottom: 3em;
	float:left;
*/
	width: 100%;
	clear: both;

}

#sitemap dl {
	font-family: "Lucida Grande", Verdana;
	color: White;
	display: inline-block;
	vertical-align: top;
	width: 19%;
/* IE:   width: 16.3%;*/
/* IE:   float: left;*/

}
#sitemap dl a {
	font-size: 10px;
	color: White;
	text-decoration: none;
	display: block;
	padding: 0.25em 6px;
}
#sitemap dl a:hover {
	color: #329fd7;
	background-color: White;
}

#sitemap dl dt {
	font-weight: bold;
}
#sitemap dl dt a {
	color: White;
	font-size: 12px !important;
}
#sitemap dl dd {
	margin:0;
	font-weight: normal;
}

/* @end */

/* @group Content Area */

#content {
	line-height: 1.5em;
	clear: both;
}

#content h1,
#archetypes-fieldname-title input {
	margin-top: 0.5em;
	font-family: "Helvetica Neue", Arial, sans-serif;
	color: black;
	clear: left;
	font-weight: bold;
	font-size: 26px;
	line-height: 32px;
	letter-spacing: -1px;
}


#content h1.documentFirstHeading {
	margin-top: 0;
}

#content h2 {
	margin-top: 0.5em;
	color: #444;
	padding: 0;
	letter-spacing: -1px;
	font: bold 22px/28px "Helvetica Neue", Arial, sans-serif;
}

#content h3 {
	margin-top: 0.5em;
	color: #444;
	padding: 0;
	letter-spacing: -1px;
	font: bold 18px/24px "Helvetica Neue", Arial, sans-serif;
}
#content h4 {
	margin-top: 0.5em;
	color: #444;
	padding: 0;
	letter-spacing: -1px;
}

#content h2 a:link,
h2 a:link,
#content h2 a:link:hover  {
	display: block;
	text-decoration: none;
	margin-bottom: 8px;
	border-style: none;
}

#content h3 a:link:hover {
	text-decoration: none;
}

#content p,
#content ul,
#content ol,
#content table,
#content dl,
#content dt,
#content dd,
dl.portlet p,
dl.portlet ul {
	margin-right: 1em;
	margin-bottom: 1em;
	line-height: 1.5em;
	color: black;
	font-size: 13px;
}

#content p,
#content dl,
#content ul,
#content ol {
	text-align: justify;	
}

#content a:link,
dl.portlet a:link {
	color: #205c90;
	border-bottom: 1px solid #ccc;
}

#content a:link:hover,
dl.portlet a:link:hover {
	color: #75ad0a;
	border-bottom: 1px solid #ccc;
}

#content a:visited, 
dl.portlet a:visited {
	color: #427597;
	border-bottom: 1px solid #ccc;
}
#content a:target {
	background-color: #ffb !important;
}

#content img {
	max-width: 100%;
}

#content ul,
dl.portlet ul {
	list-style-type: disc;
	margin-left: 2em;
}

#content ol,
dl.portlet ol {
	list-style-type: decimal;
	margin-left: 2em;
}

#content li,
dl.portlet li {
	margin-bottom: 0.25em;
	line-height: 1.5em;
	display: list-item;
}

#content dt {
	font-weight: bold;
	margin-bottom: 0;
	margin-right: 0;
}
#content dd {
	margin: 0 0 1em 1em;
}

#content pre {
	background-color: #222;
	color: White;
	font-family: Monaco, Consolas, Inconsolata, "Courier New", monospace;
	padding: 10px;
	overflow-x: auto;
	font-size: 80%;
	margin-bottom: 1em;
	line-height: 1.3em;
}

#content code {
	font-family: Monaco, Consolas, Inconsolata, "Courier New", monospace;
}

#content div.documentByLine {
	margin-bottom: 10px;
	font-size: 11px;
	display: block;
	margin-top: -0.5em;
	color: gray;
}

#content .discreet,
#sidebar .discreet {
	color: #666;
	font-size: 11px;
	font-weight: normal;
}

#content .visualHighlight {
    background-color: #ffb;
}

#content .pullquote {
    padding: 0 1em 0 1em;
    margin: 0 0 1em 1em;
    font-weight: bold;
    float: right;
    width: 35%;
    clear: right;
    border-left: 1px solid #888;
	color: #888;
}
#content .callout {
    color: #666;
    padding: 1em;
	border: 1px solid #666;
	border-style: solid none;
	clear:  both;
}


#content table {
	width: 100%;
	text-align: left;
}

#content p.documentDescription,
#description * {
	color: gray !important;
	font: bold 1em "Helvetica Neue", Arial, sans-serif !important;
	margin-left: 0;
}

#content img.tileImage,
#content div.newsImageContainer {
	float: right;
	margin: 0 1em 0.5em 1em;
}
#content div.newsImageContainer {
	width: 200px;
}
/* ... */

